groundcover/application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: groundcover-portal-ingress
  namespace: groundcover
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: groundcover.tools.bomdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal
            port:
              number: 5555
  tls:
  - hosts:
    - groundcover.tools.bomdemo.com
    secretName: groundcover-cert
